# life_quest_backend

./: .env.example  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20260118_2114_4c519c8881e2_initial_schema.py
app/: __init__.py  config.py  main.py
app/api/: deps.py
app/api/v1/: auth.py  profiles.py  router.py  users.py
app/core/: exceptions.py  handlers.py  logging.py  oauth.py  security.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  life_area.py  powerup.py  profile.py  quest.py  skill.py  streak.py  title.py  user.py  xp.py
app/repositories/: __init__.py  profile_repo.py  user_repo.py
app/schemas/: auth.py  common.py  profile.py  user.py
app/services/: auth_service.py  profile_service.py  user_service.py
